# SPORE

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release-and-publish.yml  release.yml
docs/: 01-SPORE.md  02-DataIndex.md  02-group_by_cluster_idx.md
src/spore_clustering/: SPORE.py  __init__.py
