[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "spore-clustering"
version = "0.1.0b1"
authors = [
  { name="Randolph Wiredu-Aidoo", email="randyaidoo.dev@gmail.com" },
]
description = "The SPORE clustering algorithm."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["scikit-learn~=1.6.1", "numpy~=2.2.1", "hnswlib~=0.8.0"]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/RandyWAidoo/SPORE.git"